--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <h2 class="st-section-heading-title">Why Choose</h2>
           <div class="st-seperator">
             <div class="st-seperator-left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-            <div class="st-seperator-center"><img src="assets/img/icons/4.png" alt="icon"></div>
+            <div class="st-seperator-center"><img src="assets/img/logoicon.png" alt="icon"></div>
             <div class="st-seperator-right wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
           <div class="st-section-heading-subtitle">Your family-friendly dental care, ensuring healthy smiles with expert,  <br> affordable, and accessible treatment.</div>
@@ -381,7 +381,9 @@
                   </div>
                   <div class="st-call-text">
                     <div class="st-call-title">Call Now</div>
-                    <div class="st-call-number">8778 94 8063</div>
+                    <div class="st-call-number">
+                      <a href="tel:+918778948063">8778 94 8063</a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -570,7 +572,7 @@
           <h2 class="st-section-heading-title">Make an appointment</h2>
           <div class="st-seperator">
             <div class="st-seperator-left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-            <div class="st-seperator-center"><img src="assets/img/icons/4.png" alt="icon"></div>
+            <div class="st-seperator-center"><img src="assets/img/logoicon.png" alt="icon"></div>
             <div class="st-seperator-right wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
           <div class="st-section-heading-subtitle">Book your dental appointment today for a healthy and confident smile! </div>
@@ -676,7 +678,7 @@
           <h2 class="st-section-heading-title">Meet our Doctor</h2>
           <div class="st-seperator">
             <div class="st-seperator-left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-            <div class="st-seperator-center"><img src="assets/img/icons/4.png" alt="icon"></div>
+            <div class="st-seperator-center"><img src="assets/img/logoicon.png" alt="icon"></div>
             <div class="st-seperator-right wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
           <div class="st-section-heading-subtitle"> Dental clinic offers expert care in Implants, Root Canals and Aligners   <br> to ensure optimal oral health and a perfect smile</div>
@@ -737,7 +739,7 @@
           <h2 class="st-section-heading-title">View our gallery</h2>
           <div class="st-seperator">
             <div class="st-seperator-left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-            <div class="st-seperator-center"><img src="assets/img/icons/4.png" alt="icon"></div>
+            <div class="st-seperator-center"><img src="assets/img/logoicon.png" alt="icon"></div>
             <div class="st-seperator-right wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
           <div class="st-section-heading-subtitle">Comprehensive Dental care with expert services in Implants,  <br> Root Canals, Aligners, Whitening, and Preventive Treatments for a care.</div>
@@ -886,7 +888,7 @@
           <h2 class="st-section-heading-title">What people say?</h2>
           <div class="st-seperator">
             <div class="st-seperator-left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-            <div class="st-seperator-center"><img src="assets/img/icons/4.png" alt="icon"></div>
+            <div class="st-seperator-center"><img src="assets/img/logoicon.png" alt="icon"></div>
             <div class="st-seperator-right wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
           <div class="st-section-heading-subtitle">All that our patient Give Feedback<br>about our Services <br></div>
@@ -1285,7 +1287,7 @@
           <h2 class="st-section-heading-title">Subscribe & stay updated</h2>
           <div class="st-seperator">
             <div class="st-seperator-left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-            <div class="st-seperator-center"><img src="assets/img/icons/4.png" alt="icon"></div>
+            <div class="st-seperator-center"><img src="assets/img/logoicon.png" alt="icon"></div>
             <div class="st-seperator-right wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
           <div class="st-section-heading-subtitle">Sign up to our newsletter and be the first to know about latest news, <br>special offers, events, and discounts.</div>
@@ -1327,7 +1329,7 @@
           <h2 class="st-section-heading-title">Stay connect with us</h2>
           <div class="st-seperator">
             <div class="st-seperator-left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-            <div class="st-seperator-center"><img src="assets/img/icons/4.png" alt="icon"></div>
+            <div class="st-seperator-center"><img src="assets/img/logoicon.png" alt="icon"></div>
             <div class="st-seperator-right wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
           <div class="st-section-heading-subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>Lorem Ipsum the industry's standard dummy text.</div>
